<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Platinum_White"
    tools:context=".Innovator_Profile_Edit">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <ImageView
            android:id="@+id/ProfileDp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_account_circle_24" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="262dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="59dp"
        android:backgroundTint="@color/main_yellow"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edtContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/contact_no"
        app:layout_constraintBottom_toTopOf="@+id/etContactNo"
        app:layout_constraintStart_toStartOf="@+id/etContactNo" />

    <TextView
        android:id="@+id/innovator_heading"
        android:layout_width="104dp"
        android:layout_height="26dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="233dp"
        android:layout_marginBottom="687dp"
        android:text="@string/edt_profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edtfname"
        android:layout_width="121dp"
        android:layout_height="18dp"
        android:text="@string/fullName"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="264dp"
        android:layout_marginBottom="419dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fname"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edtNIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="350dp"
        android:layout_marginBottom="4dp"
        android:text="@string/NIC"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/inputNIC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inputNIC" />

    <EditText
        android:id="@+id/inputNIC"
        android:layout_width="354dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtNIC"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etContactNo"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/Edt_phone"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNIC" />

    <TextView
        android:id="@+id/preworkID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_work"
        app:layout_constraintBottom_toTopOf="@+id/etPrevWork"
        app:layout_constraintStart_toStartOf="@+id/etPrevWork" />

    <EditText
        android:id="@+id/etPrevWork"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pre_working"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContactNo" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="59dp"
        android:backgroundTint="#444040"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="350dp"
        android:layout_marginBottom="678dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="76dp"
        android:layout_height="62dp"
        android:layout_marginStart="319dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="653dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/innovact_img_nw" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="686dp"
        android:text="@string/as_innovator"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:background="@color/Platinum_White"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="671dp" />

    <ImageButton
        android:id="@+id/imageButton21"
        android:layout_width="103.60dp"
        android:layout_height="56dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <ImageButton
        android:id="@+id/imageButton22"
        android:layout_width="103.60dp"
        android:layout_height="56dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton21"
        app:srcCompat="@drawable/ic_baseline_format_list_bulleted_24" />

    <ImageButton
        android:id="@+id/imageButton23"
        android:layout_width="103.60dp"
        android:layout_height="56dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton22"
        app:srcCompat="@drawable/ic_baseline_message_24" />

    <ImageButton
        android:id="@+id/imageButton24"
        android:layout_width="103.60dp"
        android:layout_height="56dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton23"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

</androidx.constraintlayout.widget.ConstraintLayout>