<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E1E1"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="74dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="609dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#444040"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="402dp"
        android:layout_height="229dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="411dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/innovact_img_nw" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="243dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Password"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="350dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Username"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="295dp"
        android:ems="10"
        android:hint="@string/log_uname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="601dp"
        android:layout_marginEnd="50dp"


        android:layout_marginBottom="75dp"
        android:backgroundTint="#F5B507"
        android:text="@string/Login_btn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="491dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="192dp"
        android:ems="10"
        android:hint="@string/log_pw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>