<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Platinum_White"
    tools:context=".Buyer_profile_editing">


    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyer_Heading">

        <ImageView
            android:id="@+id/ProfileDp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_account_circle_24" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="262dp"
        android:layout_marginTop="572dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="111dp"
        android:backgroundTint="@color/main_yellow"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="97dp"
        android:layout_height="84dp"
        android:layout_marginStart="309dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="644dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/innovact_img_nw" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="69dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="326dp"
        android:layout_marginBottom="665dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/buyer_Heading"
        android:layout_width="234dp"
        android:layout_height="51dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="89dp"
        android:text="@string/buyerEditProfile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BuyerFulName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BuyerFullName"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="239dp"
        android:layout_marginBottom="447dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/buyerFullname"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buyer_phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyer_phone"
        app:layout_constraintBottom_toTopOf="@+id/etPhone"
        app:layout_constraintStart_toStartOf="@+id/etPhone" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:text="@string/Buyer_phone" />

    <TextView
        android:id="@+id/buyerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyerAddress"
        app:layout_constraintBottom_toTopOf="@+id/etAddress"
        app:layout_constraintStart_toStartOf="@+id/etAddress" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Buyer_Address"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="572dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="111dp"
        android:backgroundTint="#444040"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="411dp"
        android:layout_height="56dp"
        android:layout_marginTop="674dp"
        android:layout_marginBottom="1dp"
        android:background="@color/Platinum_White"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="102.75dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="102.75dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:srcCompat="@drawable/ic_baseline_format_list_bulleted_24" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="102.75dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:srcCompat="@drawable/ic_baseline_message_24" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="102.75dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

</androidx.constraintlayout.widget.ConstraintLayout>